--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/vue-fontawesome": "^2.0.0",
     "axios": "^0.21.0",
+    "axios-mock-adapter": "^1.19.0",
     "buefy": "^0.9.4",
     "core-js": "^3.6.5",
+    "jest": "^26.6.3",
     "vue": "^2.6.11",
+    "vue-notification": "^1.3.20",
     "vue-router": "^3.4.9",
     "vuex": "^3.6.0"
   },
