--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "jest"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/vue-fontawesome": "^2.0.0",
+    "@vue/cli-plugin-unit-jest": "^4.5.9",
+    "@vue/test-utils": "^1.1.1",
     "axios": "^0.21.0",
     "axios-mock-adapter": "^1.19.0",
     "buefy": "^0.9.4",
     "core-js": "^3.6.5",
-    "jest": "^26.6.3",
     "vue": "^2.6.11",
     "vue-notification": "^1.3.20",
     "vue-router": "^3.4.9",
